chnaged slaes lines to yellow

--- a/html/about.html
+++ b/html/about.html
@@ -197,7 +197,7 @@
                         hands-on customer service that serves them beyond their construction material needs.
                     </p>
                 </div>
-                <p class="bridge"><span>Are you located NORTH of the 520 bridge?<br></span> Please call the NORTH store<br><br>
+                <p class="bridge"><span>Are you located NORTH of the 520 bridge?<br></span> Please call the NORTH store.<br><br>
                     <span>Are you located SOUTH of the 520 bridge?<br></span> Please call the SOUTH store.
                 </p>
             </div>
@@ -354,8 +354,8 @@
                 Warehouse/Driver</button>
 
             <p class="job-bottom-text">We are looking for individuals to join our team who can work well 
-               with others, be able to keep up in a fast paced environment, posses orginizational skills, interpersonal skills,
-               is a self starter, and can communicate verbally and in writing.
+               with others, be able to keep up in a fast-paced environment, posses organizational skills, interpersonal skills,
+               is a self-starter, and can communicate verbally and in writing.
             </p>
         </div>
         <button class="solid jobs-button"  type="button" onclick="location.href='jobs.html'">
