--- a/html/about.html
+++ b/html/about.html
@@ -163,8 +163,8 @@
                 <img src="/images/scaffold.jpg" alt="scaffolding along a building" height="400px" width="300px">
             </div>
             <div class="experience-content">
-                <p><span>35</span></p>
-                <p>+ Years<br> of Experience</p>
+                <p><span>35+</span></p>
+                <p>Years<br> of Experience</p>
                 <h3>Valley's History</h3>
                 <p>In 1982 Cliff Beatty founded Valley Construction Supply with the sole purpose of providing the region’s 
                    contractors with a reliable source for building materials at competitive prices. Being built on the ideals 
