--- a/html/about.html
+++ b/html/about.html
@@ -196,10 +196,11 @@
                         industry is a relationship business and that our customers deserve personalized, 
                         hands-on customer service that serves them beyond their construction material needs.
                     </p>
+                    <p class="bridge"><span>Are you located NORTH of the 520 bridge?<br></span> Please call the NORTH store.<br><br>
+                        <span>Are you located SOUTH of the 520 bridge?<br></span> Please call the SOUTH store.
+                    </p>
                 </div>
-                <p class="bridge"><span>Are you located NORTH of the 520 bridge?<br></span> Please call the NORTH store.<br><br>
-                    <span>Are you located SOUTH of the 520 bridge?<br></span> Please call the SOUTH store.
-                </p>
+                <img src="/images/valley v.png" alt="">
             </div>
             <div class="sales-people south-store">
                 <h3 class="store">South Store - PACIFIC, WA</h3>
