--- a/html/about.html
+++ b/html/about.html
@@ -391,7 +391,7 @@
                     business and that our customers deserve personalized, hands-on customer service 
                     that serves them beyond their construction material needs.</p>
             </div>
-            <div class="footer-item">
+            <div class="footer-item quick-links">
                 <h3>Quick Links</h3>
                 <div aria-hidden="true" class="item-line"></div>
                 <a href="services.html">Services</a>
