fixed margin on buttons

--- a/html/about.html
+++ b/html/about.html
@@ -359,7 +359,7 @@
                is a self-starter, and can communicate verbally and in writing.
             </p>
         </div>
-        <button class="solid jobs-button"  type="button" onclick="location.href='jobs.html'">
+        <button class="solid jobs-button apply-button"  type="button" onclick="location.href='jobs.html'">
             APPLY NOW
         </button>
         <div aria-hidden="true" class="clippy-sales"></div>
