added gallery page, chnaged credit app form, added gallery section ot home page, made chnages from last valley meeting

--- a/html/about.html
+++ b/html/about.html
@@ -104,15 +104,16 @@
                 <li><a href="/index.html">HOME</a></li>
                 <li class="about-li"><a class="a-link active-menu active-menu-main" href="about.html">ABOUT</a>
                 </li>
-                <li class="services-li"></i><a class="s-link" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
+                <li class="services-li"></i><a class="s-link" href="services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
                     <ul class="sub-nav sub2">
-                        <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR SERVICES</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR PRODUCTS</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a id="contact-width-change" class="service-drop-link"href="materials.html">BUILDING MATERIALS</a></li>
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
+                <li class="about-li"><a class="a-link" href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
                         <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
@@ -196,8 +197,8 @@
                         industry is a relationship business and that our customers deserve personalized, 
                         hands-on customer service that serves them beyond their construction material needs.
                     </p>
-                    <p class="bridge"><span>Are you located NORTH of the 520 bridge?<br></span> Please call the NORTH store.<br><br>
-                        <span>Are you located SOUTH of the 520 bridge?<br></span> Please call the SOUTH store.
+                    <p class="bridge"><span>Are you located NORTH of the 520 bridge?<br></span> Please call the NORTH store (800) 559-8566.<br><br>
+                        <span>Are you located SOUTH of the 520 bridge?<br></span> Please call the SOUTH store at (800) 922-2082.
                     </p>
                 </div>
                 <img src="/images/valley v.png" alt="">
@@ -450,7 +451,7 @@
                         <p>Fax: (360) 653-7855</p>
                     </div>
                 </div>
-                <p>Email: sales7@<br>valleyconstructionsupply.com</p>
+                <p>Email: websitesales@<br>valleyconstructionsupply.com</p>
             </div>
         </div>
         <div class="branding">
