--- a/html/apply.html
+++ b/html/apply.html
@@ -103,15 +103,16 @@
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
                 <li class="about-li"><a class="a-link" href="about.html">ABOUT</a></li>
-                <li class="services-li"></i><a class="s-link" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
+                <li class="services-li"></i><a class="s-link" href="services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
                     <ul class="sub-nav sub2">
-                        <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR SERVICES</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR PRODUCTS</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a id="contact-width-change" class="service-drop-link"href="materials.html">BUILDING MATERIALS</a></li>
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
+                <li class="about-li"><a class="a-link" href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link active-menu" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub3">
                         <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
@@ -173,11 +174,11 @@
             <p class="bottom-p">If you have any questions please call 253-447-2251.  Thank you for your inquiry and we look forward
                 to doing business with you.
             </p>
-            <button class="solid app-button" type="submit" onclick="window.open('/images/CREDIT-APP-LIST.pdf')">
+            <button class="solid app-button" type="submit" onclick="window.open('/images/credit-app-latest.pdf')">
                 CLICK TO DOWNLOAD
             </button>
             <div class="iframe">
-                <iframe src="https://drive.google.com/file/d/1pjCjjDudAK9mliaIcYbuiC9z84Qz8sL-/preview" width="640" height="780"></iframe>
+                <iframe src="/images/credit-app-latest.pdf" width="640" height="780"></iframe>
             </div>
         </div>
         <div aria-hidden="true" class="clippy-sales"></div>
@@ -268,7 +269,7 @@
                         <p>Fax: (360) 653-7855</p>
                     </div>
                 </div>
-                <p>Email: sales7@<br>valleyconstructionsupply.com</p>
+                <p>Email: websitesales@<br>valleyconstructionsupply.com</p>
             </div>
         </div>
         <div class="branding">
