--- a/html/materials.html
+++ b/html/materials.html
@@ -103,15 +103,16 @@
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
                 <li class="about-li"><a class="a-link" href="about.html">ABOUT</a></li>
-                <li class="services-li"></i><a class="s-link active-menu" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
+                <li class="services-li"></i><a class="s-link active-menu" href="services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub2">
-                        <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR SERVICES</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR PRODUCTS</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a id="contact-width-change" class="service-drop-link active-menu" href="materials.html">BUILDING MATERIALS</a></li>
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
+                <li class="about-li"><a class="a-link" href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
                         <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
@@ -152,7 +153,7 @@
 
     <section id="tools-list" class="container">
 
-        <img class="wrenches" src="/images/wrenches.png" alt="">
+        <img class="wrenches" src="/images/valley-exterior.jpg" alt="">
 
         <div class="location-group">
             <h3 class="location-name">PACIFIC WAREHOUSE</h3>
@@ -173,7 +174,7 @@
         <h2 class="heading-lines"><span>OUR</span> INVENTORY</h2>
 
         <ul class="main-list">
-            <li class="list-header">EXCAVATION
+            <li class="list-header">EROSION CONTROL
                 <ul class="list-body">
                     <li>Filter Fence</li>
                     <li>Geo Textiles</li>
@@ -446,7 +447,7 @@
                         <p>Fax: (360) 653-7855</p>
                     </div>
                 </div>
-                <p>Email: sales7@<br>valleyconstructionsupply.com</p>
+                <p>Email: websitesales@<br>valleyconstructionsupply.com</p>
             </div>
         </div>
         <div class="branding">
