--- a/index.html
+++ b/index.html
@@ -111,15 +111,16 @@
                 <ul id="main-navigation" class="side-nav">
                     <li><a class="active-menu active-menu-main" href="index.html">HOME</a></li>
                     <li class="about-li"><a class="a-link" href="html/about.html">ABOUT</a></li>
-                    <li class="services-li"></i><a class="s-link" href="html/services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
+                    <li class="services-li"></i><a class="s-link" href="html/services.html">PRODUCTS</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
                         <ul class="sub-nav sub2">
-                            <li><a id="contact-width-change" class="service-drop-link"href="html/services.html">OUR SERVICES</a></li>
+                            <li><a id="contact-width-change" class="service-drop-link"href="html/services.html">OUR PRODUCTS</a></li>
                             <li><a id="contact-width-change" class="service-drop-link" href="html/rebar-fabrication.html">REBAR FABRICATION</a></li>
                             <li><a id="contact-width-change" class="service-drop-link" href="html/concrete.html">CONCRETE ACCESSORIES</a></li>
                             <li><a id="contact-width-change" class="service-drop-link"href="html/materials.html">BUILDING MATERIALS</a></li>
                         </ul>
                     </li>
                     <li><a href="html/promotions.html">PROMOTIONS</a></li>
+                    <li class="about-li"><a class="a-link" href="html/gallery.html">GALLERY</a></li>
                     <li class="contact-li"><a class="c-link" href="html/contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                         <ul class="sub-nav sub3">
                             <li><a class="about-drop-link" href="html/jobs.html">JOBS</a></li>
@@ -205,13 +206,13 @@
             <div class="card container">
                 <div class="card-content">
                     <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" id="Layer_5" enable-background="new 0 0 64 64" height="512px" viewBox="0 0 64 64" width="512px" class=""><g><g><path d="m26 1h-16c-1.654 0-3 1.346-3 3s1.346 3 3 3v5c0 2.757 2.243 5 5 5v-2c-1.654 0-3-1.346-3-3v-5h12v5c0 1.654-1.346 3-3 3v2c2.757 0 5-2.243 5-5v-5c1.654 0 3-1.346 3-3s-1.346-3-3-3zm0 4h-16c-.552 0-1-.448-1-1s.448-1 1-1h16c.552 0 1 .448 1 1s-.448 1-1 1z" data-original="#000000" class=""/><path d="m54 1h-16c-1.654 0-3 1.346-3 3s1.346 3 3 3v5c0 2.757 2.243 5 5 5v-2c-1.654 0-3-1.346-3-3v-5h12v5c0 1.654-1.346 3-3 3v2c2.757 0 5-2.243 5-5v-5c1.654 0 3-1.346 3-3s-1.346-3-3-3zm0 4h-16c-.552 0-1-.448-1-1s.448-1 1-1h16c.552 0 1 .448 1 1s-.448 1-1 1z" data-original="#000000" class=""/><path d="m50.46 61c.954-1.063 1.54-2.462 1.54-4h.414l4.666-4.666-3.25-17.334h-4.83v2h3.17l2.75 14.666-3.287 3.287c-.614-1.684-1.958-3.015-3.651-3.61.006-.114.018-.228.018-.343 0-3.309-2.691-6-6-6-1.496 0-2.886.571-3.955 1.516l1.785-9.516h3.17v-2h-4.83l-2.45 13.07c-.236-.039-.474-.07-.72-.07-.817 0-1.624.21-2.348.602-.935-1.018-2.241-1.602-3.652-1.602-.362 0-.718.045-1.065.121.698-1.877 1.065-3.869 1.065-5.892v-6.229h-22v6.229c0 5.221 2.39 10.087 6.449 13.279-.888.903-1.449 2.128-1.449 3.492 0 1.13.391 2.162 1.026 3h-8.026v2h54v-2zm-27.561-24c-.465 2.279-2.484 4-4.899 4s-4.434-1.721-4.899-4zm-13.899 4.229v-4.229h2.08c.488 3.386 3.401 6 6.92 6s6.432-2.614 6.92-6h2.08v4.229c0 2.372-.568 4.699-1.645 6.799-.958-.649-2.113-1.028-3.355-1.028-3.309 0-6 2.691-6 6 0 .033 0 .066.001.101-.271.055-.532.135-.786.232-3.898-2.797-6.215-7.278-6.215-12.104zm37 19.771h-29c-1.654 0-3-1.346-3-3 0-1.638 1.319-2.974 2.951-3l1.386.045-.255-1.236c-.055-.264-.082-.537-.082-.809 0-2.206 1.794-4 4-4s4 1.794 4 4h2c0-1.202-.359-2.321-.97-3.261.541-.47 1.24-.739 1.97-.739 1.056 0 2.015.552 2.566 1.475l.604 1.016.901-.765c.391-.331 1.041-.726 1.929-.726 1.654 0 3 1.346 3 3h2c0-1.456-.636-2.757-1.633-3.672.644-1.396 2.059-2.328 3.633-2.328 2.206 0 4 1.794 4 4-1.31 0-2.555.414-3.599 1.198l1.201 1.6c.696-.523 1.525-.798 2.398-.798 2.206 0 4 1.794 4 4s-1.794 4-4 4z" data-original="#000000" class=""/><path d="m22 35v-20c0-2.206-1.794-4-4-4s-4 1.794-4 4v20z" fill="#f0bc5e" data-original="#F0BC5E" class="active-path" style="fill:#FDD008" data-old_color="#f0bc5e"/><g><path d="m61 61h2v2h-2z" data-original="#000000" class=""/><path d="m1 61h2v2h-2z" data-original="#000000" class=""/><path d="m27 59h2c0-.552.448-1 1-1v-2c-1.654 0-3 1.346-3 3z" data-original="#000000" class=""/><path d="m17 59h2c0-.552.448-1 1-1v-2c-1.654 0-3 1.346-3 3z" data-original="#000000" class=""/><path d="m41 55v2c.552 0 1 .448 1 1h2c0-1.654-1.346-3-3-3z" data-original="#000000" class=""/><g><path d="m21 57h2c0-.552.448-1 1-1v-2c-1.654 0-3 1.346-3 3z" data-original="#000000" class=""/><path d="m33 52v2c.552 0 1 .448 1 1h2c0-1.654-1.346-3-3-3z" data-original="#000000" class=""/></g><path d="m36 56v2c.552 0 1 .448 1 1h2c0-1.654-1.346-3-3-3z" data-original="#000000" class=""/></g><g><path d="m47.721 43h-3.441l-2.28-6.838v-25.162h8v25.162z" fill="#f0bc5e" data-original="#F0BC5E" class="active-path" style="fill:#FDD008" data-old_color="#f0bc5e"/></g></g></g> </svg>
-                    <h3>Erosion Control</h3>
+                    <h3>Products Offered</h3>
                     <div class="card-line"></div>
-                    <p>We offer a wide variety of Erosion Control Products, from Poly Sheeting, Catch Basin Socks, 
-                       Nylon Sand Bags, Reinforced Filter Fence, and numerous other Geotextile Products including 
-                       Straw Bales, T/Post, Wood Stakes, and Straw Wattles.
+                    <p>We offer a wide variety of products such as lateral restraint systems, drainage materials, 
+                       wood construction connectros, wholesale concrete accessories, rebar fabrication, seismic retrofit,
+                       siding materials, erosion control, rooftop protection, and more.
                     </p>
-                    <button type="button" onclick="location.href='html/services.html'">
+                    <button type="button" onclick="location.href='html/materials.html'">
                         Read More<i class="fas fa-chevron-right"></i>
                     </button>
                 </div>
@@ -496,33 +497,6 @@
     </section>
 
     <!-- ============================================ -->
-	<!--                   GALLERY                    -->
-    <!-- ============================================ -->
-
-<!--
-    <section id="gallery">
-        <div class="gallery-topper">
-            <h2 class="heading-lines"><span>PROJECT</span> GALLERY</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nemo rerum eveniet
-                iure tempore odit voluptatum expedita officia quam corporis? Lorem ipsum dolor 
-                sit. </p>
-        </div>
-        <div class="gallery container">
-            <div id="img1"><img class="image" src="../images/Product 3.jpg" alt=""></div>
-            <div id="img2"><img class="image" src="../images/Porject 4.jpg" alt=""></div>
-            <div id="img3"><img class="image" src="../images/Project-1.jpg" alt=""></div>
-            <div id="img4"><img class="image" src="../images/Project 5.jpg" alt=""></div>
-            <div id="img5"><img class="image" src="../images/Product 10.jpg" alt=""></div>
-            <div id="img6"><img class="image" src="../images/project 2.jpg" alt=""></div>
-        </div>
-        <button class="solid gallery-button"  type="button" onclick="location.href='html/gallery.html'">
-            SEE MORE
-        </button>
-        <div aria-hidden="true" class="clippy-gallery"></div>
-    </section>
--->
-
-    <!-- ============================================ -->
 	<!--                   PARTNERS                   -->
     <!-- ============================================ -->
 
@@ -556,6 +530,32 @@
             <a href="https://www.insulfoam.com/"><img src="../images/insulfoam.jpg" alt="insulfoam logo"></a>
             <a href="http://www.huberwood.com/advantech/advantech-subfloor-adhesive"><img src="../images/advantech-big.png" alt="advantech logo"></a>
             <a href="https://superanchor.com/"><img src="../images/superanchor.png" alt="super anchor logo"></a>
+        </div>
+    </section>
+
+    <!-- ============================================ -->
+	<!--                   GALLERY                    -->
+    <!-- ============================================ -->
+
+    <section id="gallery">
+        <div class="gallery-topper">
+            <div aria-hidden="true" class="dark"></div>
+            <h2>OUR GALLERY</h2>
+            <button class="solid gallery-button"  type="button" onclick="location.href='/html/gallery.html'">
+                VIEW GALLERY
+            </button>
+        </div>
+        <div class="gallery-group">
+            <img src="/images/Porject-4-crop.jpg" alt="">
+            <img src="/images/Product 10-crop.jpg" alt="">
+            <img src="/images/Product 2-crop.jpg" alt="">
+            <img src="/images/Product 5-crop.jpg" alt="">
+            <img src="/images/rebar-2-crop.jpg" alt="">
+            <img src="/images/Product 6-crop.jpg" alt="">
+            <img src="/images/Product-3-crop.jpg" alt="">
+            <img src="/images/rebar-crop.jpg" alt="">
+            <img src="/images/valley-exterior-crop.jpg" alt="">
+            <img src="/images/rebar-crop.jpg" alt="">
         </div>
     </section>
 
@@ -692,7 +692,7 @@
                         <p>Fax: (360) 653-7855</p>
                     </div>
                 </div>
-                <p>Email: sales7@<br>valleyconstructionsupply.com</p>
+                <p>Email: websitesales@<br>valleyconstructionsupply.com</p>
             </div>
         </div>
         <div class="branding">
