chnaged designed to developed in the branding of the footer

--- a/html/services.html
+++ b/html/services.html
@@ -139,9 +139,8 @@
         <div aria-hidden="true" class="landing-dark"></div>
         <div class="container landing-group">
             <div class="landing-text">
-                <h1>Services</h1>
-                <h2>Valley Construction Supply offers a wide range of services and products for you to choose from.
-                    These are among the many categories of constrcution products and services we offer.
+                <h1>Products</h1>
+                <h2>Valley Construction Supply offers a wide variety of products for your framing, rebar and drainage needs
                 </h2>
             </div>
         </div>
@@ -156,7 +155,7 @@
     <section id="service">
         <div class="service-topper container">
             <div id="services-heading">
-                <h2 class="heading-lines"><span>VALLEY'S</span> SERVICES</h2>
+                <h2 class="heading-lines"><span>VALLEY'S</span> PRODUCTS</h2>
                 <p>At Valley Construction Supply, our two warehouse locations in Marysville and 
                    Pacific make us convenient to all of your Puget Sound are construction sites.  
                    Both locations have a complete inventory with experienced staff whose 
@@ -454,7 +453,7 @@
         </div>
         <div class="branding">
             <div aria-hidden="true" class="branding-line"></div>
-            <p>Designed By <span><a href="">Oak Harbor Web Designs</a></span></p>
+            <p>Developed By <span><a href="">Oak Harbor Web Designs</a></span></p>
             <p>Copyright &copy 2020</p>
         </div>
     </div>
