--- a/html/inside-sales.html
+++ b/html/inside-sales.html
@@ -275,7 +275,7 @@
         </div>
         <div class="branding">
             <div aria-hidden="true" class="branding-line"></div>
-            <p>Designed By <span><a href="">Oak Harbor Web Designs</a></span></p>
+            <p>Developed By <span><a href="">Oak Harbor Web Designs</a></span></p>
             <p>Copyright &copy 2020</p>
         </div>
     </div>
