made valley edits

--- a/html/rebar-fabrication.html
+++ b/html/rebar-fabrication.html
@@ -155,11 +155,13 @@
         <img src="/images/rebar.jpg" alt="rebar fabrication facility" width="450px">
         <div class="rebar-group">
             <h2><span>Valley's</span> Rebar Fabrication Facility</h2>
-            <p>Valley Construction Supply has it's own rebar fabrication facility located in Pacific WA 
-                south of Seattle.  Supported by it's own feet of delivery vehicles our facility can 
-                fabricate your rebar requirements promptly and deliver your product whenever you need it.<br><br>
+            <p>Valley Construction Supply can provide rebar fabrication for your residential and
+                commercial jobs. Using the ASA standard rebar bend list, we can cut and bend rebar to fill your
+                custom orders. Located in our Pacific store, we can deliver your fabricated rebar orders right to
+                your jobsite. From detailing, estimating and fabricating, our experienced sales staff is here to
+                help every step of the way.<br><br>
 
-               Our direct mill relationships consistantly allow us to fabricate quality product at highly 
+               Our direct mill relationships also allow us to consistantly fabricate quality product at highly 
                competitive prices. <br><br>
 
                No other local construction material supplier has the ability to fabricate rebar specifically 
