--- a/index.html
+++ b/index.html
@@ -368,7 +368,8 @@
                 <img src="../images/seismic.jpg" alt="interior of a commercial building">
                 <div class="future-card-content container">
                     <h3>Siesmic Upgrade</h3>
-                    <p>Valley Construction Supply has been involved in numerous seismic upgrade projects tied to historical renovation and preservation projects.
+                    <p>From new home building to upgrade renovations, Valley Construction
+                        Supply sales staff has experience in seismic retrofitting.
                     </p>
                     <button type="button" onclick="location.href='https://q13fox.com/2017/10/24/quake-retrofits-whats-involved-the-cost-and-how-new-nw-technology-could-help/'">
                         Learn More<i class="fas fa-chevron-right"></i>
@@ -379,7 +380,8 @@
                 <img src="../images/net-zero.jpg" alt="plant growing inside a lightbulb">
                 <div class="future-card-content container">
                     <h3>Energy Code</h3>
-                    <p>At VCS we are always in the loop on the current Energy Code updates and the latest products that our community and customers need to know about.
+                    <p>Along with staying current on product knowledge, our sales staff are also up to
+                        date on energy codes within our region.
                     </p>
                     <button type="button" onclick="location.href='https://codewatcher.us/codes/seattle-code/'">
                         Learn More<i class="fas fa-chevron-right"></i>
@@ -390,8 +392,8 @@
                 <img src="../images/green-building.jpg" alt="close up of solar panels">
                 <div class="future-card-content container">
                     <h3>Supporting Green Builders</h3>
-                    <p>Valley Construction Supply currently supports multiple customers who 
-                       have established their companies as leaders in "Green Building" industry. 
+                    <p>Valley Construction Supply works with local as well as national
+                        customers who include sustainable, energy efficient products in their finished buildings.
                     </p>
                     <button type="button" onclick="location.href='https://en.wikipedia.org/wiki/Green_building'">
                         Learn More<i class="fas fa-chevron-right"></i>
@@ -425,7 +427,8 @@
                     </g><path d="M419.243,39.001h-76.379C331.823,28.48,316.898,22,300.479,22h-8.76C285.022,8.742,271.263,0,256,0s-29.021,8.742-35.719,22  H211.5c-16.419,0-31.343,6.48-42.384,17.001H92.759c-26.885,0-48.758,21.873-48.758,48.758v375.484  c0,26.885,21.873,48.758,48.758,48.758h326.483c26.885,0,48.758-21.873,48.758-48.758V87.759  C468.001,60.874,446.128,39.001,419.243,39.001z M211.501,42h15.586c4.498,0,8.442-3.003,9.639-7.338  C239.111,26.029,247.037,20,256.001,20s16.89,6.029,19.274,14.662c1.197,4.335,5.142,7.338,9.639,7.338h15.565  c21.705,0,39.571,16.75,41.354,38.001H170.147C171.93,58.75,189.797,42,211.501,42z M448.001,463.244  c0,15.857-12.901,28.758-28.758,28.758H92.759c-15.857,0-28.758-12.901-28.758-28.758V87.759c0-15.857,12.901-28.758,28.758-28.758  h62.347c-3.276,7.512-5.105,15.794-5.105,24.5v6.5c0,5.523,4.477,10,10,10H351.98c5.523,0,10-4.477,10-10v-6.5  c0-8.705-1.829-16.988-5.105-24.5h62.368c15.857,0,28.758,12.901,28.758,28.758V463.244z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M178.268,149.595l-42.762,42.763l-13.173-13.174c-3.905-3.904-10.237-3.904-14.143,0c-3.905,3.905-3.905,10.237,0,14.143  l20.245,20.245c1.953,1.953,4.512,2.929,7.071,2.929s5.119-0.976,7.071-2.929l49.833-49.833c3.905-3.905,3.905-10.237,0-14.143  C188.505,145.691,182.173,145.691,178.268,149.595z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M168.001,368h-48c-5.523,0-10,4.477-10,10v48c0,5.523,4.477,10,10,10h48c5.523,0,10-4.477,10-10v-48  C178.001,372.477,173.524,368,168.001,368z M158.001,416h-28v-28h28V416z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M168.001,260h-48c-5.523,0-10,4.477-10,10v48c0,5.523,4.477,10,10,10h48c5.523,0,10-4.477,10-10v-48  C178.001,264.477,173.524,260,168.001,260z M158.001,308h-28v-28h28V308z" data-original="#000000" class="active-path" style="fill:#000000"/></g> </svg>
                 <h3>Promotions And Specials</h3>
                 <p>
-                    At any given time we will be offering promotions for services, products, and on-time payments. We currently have three specials going on at the moment, check out our "Promotions" page for more info.
+                    Valley Construction Supply continually offers promotions. Check out our promotions
+                    page for our current specials.
                 </p>
                 <button type="button" onclick="location.href='html/promotions.html'">
                    Learn More<i class="fas fa-chevron-right"></i>
@@ -443,9 +446,9 @@
                 </g></g> </svg>
                 <h3>Accurate Take-Offs</h3>
                 <p>
-                   Review blueprints to gather the correct material and 
-                   make a thorough list for drainage, foundation, framing 
-                   and miscellaneous hardware.
+                    Valley Construction Supply sales staff are experienced in reading blueprints and
+                    gathering the appropriate drainage, foundation, framing and miscellaneous hardware needed for
+                    the project.
                 </p>
                 <button type="button" onclick="location.href='/html/contact.html'">
                    Learn More<i class="fas fa-chevron-right"></i>
@@ -464,10 +467,10 @@
                     <path style="fill:#FDD008" d="M80.944,368.976C85.296,364.632,88,358.624,88,352c0-13.232-10.768-24-24-24s-24,10.768-24,24   s10.768,24,24,24c0.76,0,1.472-0.152,2.216-0.224c32.392,47.984,83.448,79.528,140.8,86.68l1.976-15.872   C157.096,440.112,110.808,411.92,80.944,368.976z M56,352c0-4.416,3.592-8,8-8s8,3.584,8,8s-3.592,8-8,8S56,356.416,56,352z" data-original="#E56565" class="active-path" data-old_color="#E56565"/>
                     <path style="fill:#FDD008" d="M408,160c-1.736,0-3.416,0.208-5.048,0.56c-25.616-42.32-65.224-73.488-112.624-87.92l-4.656,15.312   c43.016,13.088,80.352,42.528,103.712,81.08c-3.312,4.12-5.384,9.28-5.384,14.968c0,13.232,10.768,24,24,24s24-10.768,24-24   S421.232,160,408,160z M408,192c-4.408,0-8-3.584-8-8s3.592-8,8-8s8,3.584,8,8S412.408,192,408,192z" data-original="#E56565" class="active-path" data-old_color="#E56565"/>
                 </g></g> </svg>
-                <h3>Fastest Fill Rates</h3>
+                <h3>Orders Ship Complete</h3>
                 <p>
-                    We have high fill rates and very few backorders. Whatever material you need, we make sure 
-                    to have them in stock and ready to order so you'll have what you need when you need it.
+                    With a complete inventory at each location, Valley Construction Supply can fill your order for
+                    next day delivery.
                 </p>
                 <button type="button" onclick="location.href='html/contact.html'">
                     Learn More<i class="fas fa-chevron-right"></i>
@@ -481,9 +484,8 @@
                 </g><path style="fill:#FFFFFF" d="M270.711,135.05c-1.203,1.988-2.355,4.019-3.413,6.101c-0.145,0.273-0.273,0.563-0.41,0.853  c-1.877,3.763-3.516,7.637-4.915,11.597c-0.29,0.853-0.631,1.621-0.853,2.449c-0.478,1.459-0.853,2.953-1.28,4.429  s-0.853,3.115-1.203,4.693c-0.299,1.314-0.563,2.637-0.811,3.959c-0.35,1.937-0.649,3.9-0.853,5.871  c-0.137,1.092-0.299,2.167-0.401,3.268c-0.29,3.123-0.478,6.272-0.478,9.472c0,56.55,45.85,102.4,102.4,102.4  s102.4-45.85,102.4-102.4c0-3.2-0.188-6.349-0.478-9.472c-0.102-1.101-0.265-2.176-0.401-3.268  c-0.239-1.971-0.538-3.934-0.853-5.871c-0.247-1.323-0.512-2.645-0.811-3.959c-0.358-1.579-0.777-3.14-1.203-4.693  c-0.427-1.553-0.802-2.97-1.28-4.429c-0.265-0.853-0.606-1.63-0.853-2.449c-1.399-3.959-3.046-7.834-4.924-11.597  c-0.137-0.282-0.265-0.572-0.41-0.853c-1.067-2.082-2.219-4.113-3.413-6.101l-0.614-1.015c-1.28-2.057-2.56-4.07-4.019-6.033  c-32.862-45.867-96.691-56.414-142.558-23.552c-9.088,6.511-17.041,14.464-23.552,23.552c-1.417,1.963-2.739,3.977-4.019,6.033  L270.711,135.05z M358.4,110.935c42.419,0,76.8,34.381,76.8,76.8s-34.381,76.8-76.8,76.8s-76.8-34.381-76.8-76.8  S315.981,110.935,358.4,110.935z" data-original="#FFDECC" class="active-path" data-old_color="#FFDECC"/><circle style="fill:#FFFFFF" cx="358.4" cy="187.735" r="76.8" data-original="#98CDF4" class="" data-old_color="#98CDF4"/><path style="fill:#FDD008" d="M221.867,128.002v230.4h281.6v-230.4h-62.012c1.417,1.963,2.739,3.977,4.019,6.033l0.614,1.015  c1.203,1.997,2.355,4.019,3.413,6.101c0.145,0.273,0.264,0.563,0.41,0.853c1.877,3.755,3.524,7.629,4.915,11.597  c0.299,0.853,0.631,1.621,0.853,2.449c0.478,1.459,0.853,2.944,1.28,4.429s0.853,3.115,1.203,4.693  c0.299,1.314,0.563,2.628,0.811,3.959c0.358,1.937,0.64,3.9,0.853,5.871c0.137,1.092,0.299,2.167,0.401,3.268  c0.29,3.123,0.478,6.272,0.478,9.472c0,56.55-45.85,102.4-102.4,102.4s-102.4-45.85-102.4-102.4c0-3.2,0.188-6.349,0.478-9.472  c0.102-1.101,0.265-2.176,0.401-3.268c0.247-1.971,0.529-3.934,0.853-5.871c0.247-1.331,0.512-2.645,0.811-3.959  c0.358-1.579,0.777-3.14,1.203-4.693c0.427-1.553,0.802-2.97,1.28-4.429c0.265-0.853,0.597-1.63,0.853-2.449  c1.399-3.968,3.038-7.842,4.924-11.597c0.145-0.282,0.265-0.572,0.41-0.853c1.067-2.082,2.219-4.105,3.413-6.101l0.614-1.015  c1.28-2.057,2.56-4.07,4.019-6.033H221.867z" data-original="#E69C5A" class="" data-old_color="#E69C5A"/><path style="fill:#FFFFFF" d="M51.2,179.202c-9.429,0-17.067,7.637-17.067,17.067v78.507l-25.6,15.36v93.867h162.133v-204.8H51.2z" data-original="#98CDF4" class="" data-old_color="#98CDF4"/><path d="M358.4,273.069c47.13,0,85.333-38.204,85.333-85.333s-38.204-85.333-85.333-85.333s-85.333,38.204-85.333,85.333  C273.118,234.848,311.296,273.017,358.4,273.069z M349.867,120.057v16.478h17.067v-16.478c30.891,3.934,55.211,28.254,59.145,59.145  H409.6v17.067h16.478c-3.934,30.891-28.254,55.211-59.145,59.145v-16.478h-17.067v16.478c-30.891-3.934-55.211-28.254-59.145-59.145  H307.2v-17.067h-16.478C294.656,148.32,318.976,124,349.867,120.057z" data-original="#000000" class="" style="fill:#4D4C48" data-old_color="#000000"/><rect x="351.316" y="162.15" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 761.6284 25.8887)" width="48.273" height="17.067" data-original="#000000" class="" style="fill:#4D4C48" data-old_color="#000000"/><path d="M204.8,153.602c0-4.71-3.823-8.533-8.533-8.533H102.4v17.067h85.333v221.867c0,4.71,3.823,8.533,8.533,8.533h0.768  c4.685,27.853,31.061,46.635,58.914,41.95c21.495-3.618,38.332-20.454,41.95-41.95h103.936c4.685,27.853,31.061,46.635,58.914,41.95  c21.495-3.618,38.332-20.454,41.95-41.95H512v-17.067H204.8V153.602z M247.467,418.135c-15.514-0.06-29.039-10.573-32.922-25.6  h24.388v8.533H256v-8.533h24.388C276.506,407.562,262.98,418.084,247.467,418.135z M452.267,418.135  c-15.514-0.06-29.039-10.573-32.922-25.6h24.388v8.533H460.8v-8.533h24.388C481.306,407.562,467.78,418.084,452.267,418.135z" data-original="#000000" class="" style="fill:#4D4C48" data-old_color="#000000"/><path d="M503.467,119.469h-57.813c-37.487-48.188-106.948-56.858-155.136-19.371c-7.236,5.632-13.739,12.134-19.371,19.371h-49.28  c-4.71,0-8.533,3.823-8.533,8.533v230.4c0,4.71,3.823,8.533,8.533,8.533h281.6c4.71,0,8.533-3.823,8.533-8.533v-230.4  C512,123.291,508.177,119.469,503.467,119.469z M358.4,93.869c51.84,0,93.867,42.027,93.867,93.867s-42.027,93.867-93.867,93.867  s-93.867-42.027-93.867-93.867C264.593,135.921,306.586,93.928,358.4,93.869z M494.933,349.869H230.4V136.535h29.687  c-28.382,54.298-7.373,121.318,46.925,149.7s121.318,7.373,149.7-46.925c16.828-32.196,16.828-70.588,0-102.775h38.221V349.869z" data-original="#000000" class="" style="fill:#4D4C48" data-old_color="#000000"/><path d="M136.533,204.802h-76.8c-4.71,0-8.533,3.823-8.533,8.533v42.667c0,4.71,3.823,8.533,8.533,8.533h76.8  c4.71,0,8.533-3.823,8.533-8.533v-42.667C145.067,208.625,141.244,204.802,136.533,204.802z M128,247.469H68.267v-25.6H128V247.469z  " data-original="#000000" class="" style="fill:#4D4C48" data-old_color="#000000"/><rect x="110.933" y="273.069" width="34.133" height="17.067" data-original="#000000" class="" style="fill:#4D4C48" data-old_color="#000000"/><path d="M8.533,392.535h26.368c4.685,27.853,31.061,46.635,58.914,41.95c21.495-3.618,38.332-20.454,41.95-41.95h34.901  c4.71,0,8.533-3.823,8.533-8.533v-204.8c0-4.71-3.823-8.533-8.533-8.533H51.2c-14.14,0-25.6,11.46-25.6,25.6v73.677L4.139,282.822  C1.57,284.367,0,287.14,0,290.135v93.867C0,388.721,3.823,392.535,8.533,392.535z M85.333,418.135  c-15.514-0.06-29.039-10.573-32.922-25.6H76.8v8.533h17.067v-8.533h24.388C114.372,407.562,100.847,418.084,85.333,418.135z   M17.067,294.965l21.461-12.868c2.569-1.545,4.139-4.318,4.139-7.322v-78.507c0-4.71,3.823-8.533,8.533-8.533h110.933v187.733  H17.067V294.965z" data-original="#000000" class="" style="fill:#4D4C48" data-old_color="#000000"/></g> </svg>
                 <h3>Next Day Job Site Delivery</h3>
                 <p>
-                    Call us today and we can have your order delivered to your job
-                    site by tomorrow.  We can get to any job site between Thurston
-                    and Skagit County.
+                    Valley Construction Supply can deliver next day from Skagit County down to
+                    Thurston County, as well has Kitsap and Mason County.
                 </p>
                 <button type="button" onclick="location.href='html/contact.html'">
                     Learn More<i class="fas fa-chevron-right"></i>
