chnaged wrong email, andded og metal tags

--- a/html/promotions.html
+++ b/html/promotions.html
@@ -189,7 +189,8 @@
                         </ul>
                     </li>
                 </ul>
-                <p>Contact Valley Construction Supply at <span class="email">sales7@valleyconstructionsupply.com</span> for more information!</p>
+                <p>Contact Valley Construction Supply at <span class="email">websitesales@
+                    valleyconstructionsupply.com</span> for more information!</p>
                 <button class="solid gallery-button"  type="button" onclick="location.href='https://tryadvantechsfa.com/'">
                     VISIT ADVANTECH
                 </button>
@@ -241,7 +242,8 @@
                         </ul>
                     </li>
                 </ul>
-                <p>Contact Valley Construction Supply at <span class="email">sales7@valleyconstructionsupply.com</span> for more information!</p>
+                <p>Contact Valley Construction Supply at <span class="email">websitesales@
+                    valleyconstructionsupply.com</span> for more information!</p>
                 <button class="solid gallery-button"  type="button" onclick="location.href='https://joto-vent.com/'">
                     VISIT JOTO-VENT
                 </button>
@@ -266,7 +268,8 @@
                     of each month. With this new promotional account your terms will be 25%
                     discount if paid in full by the 10th of the following month for your first 3 billing cycles.
                 </P>
-                <p>Contact Valley Construction Supply at <span class="email">sales7@valleyconstructionsupply.com</span> for more information!</p>
+                <p>Contact Valley Construction Supply at <span class="email">websitesales@
+                    valleyconstructionsupply.com</span> for more information!</p>
                 <button class="solid gallery-button"  type="button" onclick="location.href='contact.html'">
                     CALL VALLEY
                 </button>
