--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <meta property="og:title" content="Construction Supply Specialist | Valley Construction Supply"/>
+    <meta property="og:description" content="Valley Construction Supply is the largest locally 
+    owned and operated supplier of wholesale concrete, framing, rebar, drainage and miscellaneous 
+    construction materials for Seattle and the surrounding Puget Sound area."/>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content=""/>
+    <meta property="og:image" content="https://imgur.com/a/Vo8N2o3"/>
+    <meta property="og:image:secure_url" content="https://imgur.com/a/Vo8N2o3"/>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Color and Tone Painting offers the best service in Seattle for the best 
-									  price.  We're locally owned and operated We offer FREE ESTIMATES to everyone 
-									  with no obligation to purchase anything.">
+    <meta name="description" content="">
 	<meta name="keywords" content="seattle">
 
 
