auto prefixer and fixed footre alignment

--- a/index.html
+++ b/index.html
@@ -702,7 +702,9 @@
                         <p>Fax: (360) 653-7855</p>
                     </div>
                 </div>
-                <p>Email: websitesales@<br>valleyconstructionsupply.com</p>
+                <p><span class="email-footer">Email:</span> websitesales@<br>valleyconstructionsupply.com</p>
+  
+
             </div>
         </div>
         <div class="branding">
