--- a/index.html
+++ b/index.html
@@ -698,8 +698,8 @@
                     </div>
                     <div class="footer-location-info">
                         <p class="uppercase">Marysville, WA</p>
-                        <p>Phone:(800) 559-8566</p>
-                        <p>Fax:(360) 653-7855</p>
+                        <p class="foot-phone">Phone:(800) 559-8566</p>
+                        <p class="foot-phone">Fax:(360) 653-7855</p>
                     </div>
                 </div>
                 <p>Email: websitesales@<br>valleyconstructionsupply.com</p>
