footer phone test

--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                     </div>
                     <div class="footer-location-info">
                         <p class="uppercase">Marysville, WA</p>
-                        <p class="foot-phone">Phone:(800) 559-8566</p>
+                        <p style="white-space: nowrap">Phone:&nbsp;(800)&nbsp;922-2082</p>
                         <p class="foot-phone">Fax:(360) 653-7855</p>
                     </div>
                 </div>
