test, added meta keywords and descriptions

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="">
-	<meta name="keywords" content="seattle">
+    <meta name="description" content="Valley Construction Supply is the largest locally owned and operated supplier of wholesale concrete, framing, rebar, drainage and miscellaneous construction materials for Seattle and the surrounding Puget Sound area.">
+    <meta name="keywords" content="valley sonstruction supply seattle, construction suppliers seattle, construction materials seattle, rebar fabrication seattle, 
+    construction rebar seattle, rebar supplier seattle">
+
+    <meta name="format-detection" content="telephone=no">
 
 
     <!-- Favicons -->
