--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <meta name="keywords" content="valley sonstruction supply seattle, construction suppliers seattle, construction materials seattle, rebar fabrication seattle, 
     construction rebar seattle, rebar supplier seattle">
 
-    <meta name="format-detection" content="telephone=no">
-
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -690,7 +688,8 @@
                     </div>
                     <div class="footer-location-info">
                         <p class="uppercase">Pacific, WA</p>
-                        <p>Phone: (800) 922-2082</p>
+                        <p style="white-space: nowrap">Phone:&nbsp;(800)&nbsp;922-2082</p>
+
                         <p>Fax: (206) 343-5840</p>
                     </div>
                 </div>
@@ -701,8 +700,8 @@
                     </div>
                     <div class="footer-location-info">
                         <p class="uppercase">Marysville, WA</p>
-                        <p class="foot-phone">Phone:&nbsp;(800)&nbsp;922-2082</p>
-                        <p class="foot-phone">Fax:(360) 653-7855</p>
+                        <p>Phone: (800) 559-8566</p>
+                        <p>Fax: (360) 653-7855</p>
                     </div>
                 </div>
                 <p>Email: websitesales@<br>valleyconstructionsupply.com</p>
