--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
     <meta name="keywords" content="valley sonstruction supply seattle, construction suppliers seattle, construction materials seattle, rebar fabrication seattle, 
     construction rebar seattle, rebar supplier seattle">
 
+    <!-- Google Search Console -->
+    <meta name="google-site-verification" content="Xo-OAHOPtBgAUAizyZIyqho7bRJsz3UAFbq9aQLxRiw" />
+    <link rel="canonical" href="https://www.valleyconstructionsupply.com/">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137702322-12"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-137702322-12');
+    </script>
+
+
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
