added personal link ot footers

--- a/html/jobs.html
+++ b/html/jobs.html
@@ -277,7 +277,7 @@
         </div>
         <div class="branding">
             <div aria-hidden="true" class="branding-line"></div>
-            <p>Developed By <span><a href="">Oak Harbor Web Designs</a></span></p>
+            <p>Developed By <span><a href="https://www.oakharborwebdesigns.com/">Oak Harbor Web Designs</a></span></p>
             <p>Copyright &copy 2020</p>
         </div>
     </div>
