--- a/html/gallery.html
+++ b/html/gallery.html
@@ -29,7 +29,7 @@
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/4f8f1d146c.js" crossorigin="anonymous"></script>
 
-    <title>Valley Construction Supply | Seattle, WA</title>
+    <title>Gallery | Valley Construction Supply | Seattle, WA</title>
 </head>
 <header>
     <!-- Top Navigation Bar  -->
@@ -180,51 +180,51 @@
             <!-- Actual Image Sizes -->
             <div class="modal-one modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Porject-4.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/Porject-4.jpg" alt="" width="300px" >
             </div>
             <div class="modal-two modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Product 2.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/Product 2.jpg" alt="" width="300px" >
             </div>
             <div class="modal-three modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Product 5.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/Product 5.jpg" alt="" width="300px" >
             </div>
             <div class="modal-four modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Product 6.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/Product 6.jpg" alt="" width="300px" >
             </div>
             <div class="modal-five modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Product 10.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/Product 10.jpg" alt="" width="300px" >
             </div>
             <div class="modal-six modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Product-3.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/Product-3.jpg" alt="" width="300px" >
             </div>
             <div class="modal-seven modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Project 2.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/Project 2.jpg" alt="" width="300px" 
             </div>
             <div class="modal-eight modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Project 3.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/Project 3.jpg" alt="" width="300px" >
             </div>
             <div class="modal-nine modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Project 5.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/Project 5.jpg" alt="" width="300px" >
             </div>
             <div class="modal-ten modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/rebar-2.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/rebar-2.jpg" alt="" width="300px" >
             </div>
             <div class="modal-eleven modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/rebar.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/rebar.jpg" alt="" width="300px" >
             </div>
             <div class="modal-twelve modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/valley-exterior.jpg" alt="" width="300px" height="300px">
+                <img class="actual" src="/images/valley-exterior.jpg" alt="" width="300px">
             </div>
             <!--<div class="modal-thirteen modal">
                 <i class="far fa-times-circle home-icon"></i>
