--- a/html/concrete.html
+++ b/html/concrete.html
@@ -29,7 +29,7 @@
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/4f8f1d146c.js" crossorigin="anonymous"></script>
 
-    <title>Valley Construction Supply | Seattle, WA</title>
+    <title>Concrete Services | Seattle WA</title>
 </head>
 <header>
     <!-- Top Navigation Bar  -->
