--- a/html/contact.html
+++ b/html/contact.html
@@ -30,7 +30,7 @@
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/4f8f1d146c.js" crossorigin="anonymous"></script>
 
-    <title>Valley Construction Supply | Seattle, WA</title>
+    <title>Contact | Valley Construction Supply | Seattle, WA</title>
 </head>
 <header>
     <!-- Top Navigation Bar  -->
