added carrot where missing

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -204,7 +204,7 @@
             </div>
             <div class="modal-seven modal">
                 <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Project 2.jpg" alt="" width="300px" 
+                <img class="actual" src="/images/Project 2.jpg" alt="" width="300px" >
             </div>
             <div class="modal-eight modal">
                 <i class="far fa-times-circle home-icon"></i>
