made gallery accessible

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -178,53 +178,53 @@
             <img id="twenty-one" src="/images/" alt="" width="300px" height="300px">-->
 
             <!-- Actual Image Sizes -->
-            <div class="modal-one modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Porject-4.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-one modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/Porject-4.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-two modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Product 2.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-two modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/Product 2.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-three modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Product 5.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-three modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/Product 5.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-four modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Product 6.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-four modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/Product 6.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-five modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Product 10.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-five modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/Product 10.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-six modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Product-3.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-six modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/Product-3.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-seven modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Project 2.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-seven modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/Project 2.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-eight modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Project 3.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-eight modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/Project 3.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-nine modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/Project 5.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-nine modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/Project 5.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-ten modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/rebar-2.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-ten modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/rebar-2.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-eleven modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/rebar.jpg" alt="" width="300px" >
+            <div aria-label="expanded image" class="modal-eleven modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/rebar.jpg" alt="" width="300px" >
             </div>
-            <div class="modal-twelve modal">
-                <i class="far fa-times-circle home-icon"></i>
-                <img class="actual" src="/images/valley-exterior.jpg" alt="" width="300px">
+            <div aria-label="expanded image" class="modal-twelve modal">
+                <button><i aria-hidden="true" class="far fa-times-circle home-icon"></i></button>
+                <img aria-hidden="true" class="actual" src="/images/valley-exterior.jpg" alt="" width="300px">
             </div>
             <!--<div class="modal-thirteen modal">
                 <i class="far fa-times-circle home-icon"></i>
