--- a/index.html
+++ b/index.html
@@ -572,16 +572,16 @@
             </button>
         </div>
         <div class="gallery-group">
-            <img src="/images/Porject-4-crop.jpg" alt="">
-            <img src="/images/Product 10-crop.jpg" alt="">
-            <img src="/images/Product 2-crop.jpg" alt="">
-            <img src="/images/Product 5-crop.jpg" alt="">
-            <img src="/images/rebar-2-crop.jpg" alt="">
-            <img src="/images/Product 6-crop.jpg" alt="">
-            <img src="/images/Product-3-crop.jpg" alt="">
-            <img src="/images/rebar-crop.jpg" alt="">
-            <img src="/images/valley-exterior-crop.jpg" alt="">
-            <img src="/images/rebar-crop.jpg" alt="">
+            <img src="/images/Porject-4-crop.jpg" alt="building site">
+            <img src="/images/Product 10-crop.jpg" alt="wooden beams">
+            <img src="/images/Product 2-crop.jpg" alt="unfinished interior plywood walls">
+            <img src="/images/Product 5-crop.jpg" alt="plywood walls on unfinished exterior of a home">
+            <img src="/images/rebar-2-crop.jpg" alt="pile of rebar">
+            <img src="/images/Product 6-crop.jpg" alt="metal clamp">
+            <img src="/images/Product-3-crop.jpg" alt="excavator working a job site">
+            <img src="/images/rebar-crop.jpg" alt="rebar fabrication facility">
+            <img src="/images/valley-exterior-crop.jpg" alt="exterior of valley construction supply office">
+            <img src="/images/rebar-crop.jpg" alt="fabrication facility">
         </div>
     </section>
 
