added analytics to each page

--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
                 <button class="primary landing-b" type="button" onclick="location.href='html/about.html'" >
                     ABOUT VCS
                 </button>
-                <button class="about solid" type="button" onclick="location.href='html/contact.html'">
+                <button class="about solid desktop-about" type="button" onclick="location.href='html/contact.html'">
+                    CALL US
+                </button>
+                <button class="about solid mobile-about" type="button" onclick="location.href='html/contact.html'">
                     CALL US
                 </button>
             </div>
@@ -640,13 +643,20 @@
     <section id="contact">
         <div class="contact-group container">
             <h2>Questions? Get in touch today.</h2>
-            <button class="solid about-content-button contact-button"  type="button" onclick="location.href='html/contact.html'">
+            <button class="solid about-content-button contact-button mobile-contact"  type="button" onclick="location.href='html/contact.html'">
+                CONTACT VCS
+            </button>
+            <button class="solid about-content-button contact-button desktop-contact"  type="button" onclick="location.href='html/contact.html'">
                 CONTACT VCS
             </button>
         </div>
     </section>
 
 </main>
+
+<!-- ============================================ -->
+<!--                    FOOTER                    -->
+<!-- ============================================ -->
 
 <footer>
     <div aria-hidden="true" class="footer-dark"></div>
