--- a/html/outside-sales.html
+++ b/html/outside-sales.html
@@ -14,6 +14,20 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- Google Search Console -->
+    <meta name="google-site-verification" content="Xo-OAHOPtBgAUAizyZIyqho7bRJsz3UAFbq9aQLxRiw" />
+    <link rel="canonical" href="https://www.valleyconstructionsupply.com/">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137702322-12"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-137702322-12');
+    </script>
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/root-styles.css">
     <link rel="stylesheet" href="/css/inside.css">
