added meta data fro rebar page

--- a/html/rebar-fabrication.html
+++ b/html/rebar-fabrication.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Valley Construction Supply can provide rebar fabrication for your residential and commercial jobs. Using the ASA standard rebar bend list, we can cut and bend rebar to fill your custom orders.">
+    <meta name="keywords" content="seattle rebar fabrication, rebar fabrication facility, rebar delivery seattle, rebar estimates seattle, rebar detailing seattle, rebar seattle">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
