fixed rabr canonical tag

--- a/html/rebar-fabrication.html
+++ b/html/rebar-fabrication.html
@@ -18,7 +18,7 @@
 
     <!-- Google Search Console -->
     <meta name="google-site-verification" content="Xo-OAHOPtBgAUAizyZIyqho7bRJsz3UAFbq9aQLxRiw" />
-    <link rel="canonical" href="https://www.valleyconstructionsupply.com/">
+    <link rel="canonical" href="https://www.valleyconstructionsupply.com/html/rebar-fabrication">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137702322-12"></script>
