changed button actions for contact  button

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -298,7 +298,7 @@
     <section id="contact">
         <div class="contact-group container">
             <h2>Questions? Get in touch today.</h2>
-            <button class="solid about-content-button contact-button"  type="button" onclick="location.href='contact.html'">
+            <button class="solid about-content-button contact-button"  type="button" onclick="window.open('contact.html')">
                 CONTACT VCS
             </button>
         </div>
