--- a/index.html
+++ b/index.html
@@ -654,10 +654,7 @@
     <section id="contact">
         <div class="contact-group container">
             <h2>Questions? Get in touch today.</h2>
-            <button class="solid about-content-button contact-button mobile-contact"  type="button" onclick="location.href='html/contact.html'">
-                CONTACT VCS
-            </button>
-            <button class="solid about-content-button contact-button desktop-contact"  type="button" onclick="location.href='html/contact.html'">
+            <button class="solid about-content-button contact-button"  type="button" onclick="window.open('/html/contact.html')">
                 CONTACT VCS
             </button>
         </div>
