--- a/html/promotions.html
+++ b/html/promotions.html
@@ -310,7 +310,7 @@
         <div aria-hidden="true" class="clippy-sales"></div>
         <div class="contact-group container">
             <h2>Questions? Get in touch today.</h2>
-            <button class="solid about-content-button contact-button"  type="button" onclick="location.href='contact.html'">
+            <button class="solid about-content-button contact-button"  type="button" onclick="window.open('contact.html')">
                 CONTACT VCS
             </button>
         </div>
