added lanidng cta class to track landing contact button

--- a/index.html
+++ b/index.html
@@ -190,10 +190,7 @@
                 <button class="primary landing-b" type="button" onclick="location.href='html/about.html'" >
                     ABOUT VCS
                 </button>
-                <button class="about solid desktop-about" type="button" onclick="location.href='html/contact.html'">
-                    CALL US
-                </button>
-                <button class="about solid mobile-about" type="button" onclick="location.href='html/contact.html'">
+                <button class="about solid landing-cta" type="button" onclick="location.href='html/contact.html'">
                     CALL US
                 </button>
             </div>
