added class to lanidng button

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <button class="primary landing-b" type="button" onclick="location.href='html/about.html'" >
                     ABOUT VCS
                 </button>
-                <button class="about solid landing-cta" type="button" onclick="location.href='html/contact.html'">
+                <button class="about solid landing-cta" type="button" onclick="window.open('/html/contact.html')">
                     CALL US
                 </button>
             </div>
