fixed erosion control link

--- a/html/services.html
+++ b/html/services.html
@@ -51,7 +51,7 @@
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/4f8f1d146c.js" crossorigin="anonymous"></script>
 
-    <title>Services | Valley Construction Supply | Seattle, WA</title>
+    <title>Products | Valley Construction Supply | Seattle, WA</title>
 </head>
 <header>
     <!-- Top Navigation Bar  -->
@@ -198,7 +198,7 @@
                     poly sheeting, fencing, ground fabrics and straw products in stock, ready for next day delivery.
                     
                 </p>
-                <button type="button" onclick="location.href='html/services.html'">
+                <button type="button" onclick="location.href='contact.html'">
                     Read More<i class="fas fa-chevron-right"></i>
                 </button>
             </div>
