chnaged jobs emial

--- a/html/jobs.html
+++ b/html/jobs.html
@@ -181,7 +181,7 @@
             <p>Please print and fill out the form and when you are done you can either scan it and email it to us, fax it, or mail it.
             </p>
             <p><span>Fax:</span> North Store: 1-866-8763 South Store: 1-866-855-7764</p>
-            <p><span>Email:</span> sales7@valleyconstructionsupply.com</p>
+            <p><span>Email:</span> websitesalesvalleyconstructionsupply.com</p>
             <p class="bottom-p">“We are an ‘at-will’ employer and operate under the provision that employees have the
                 right to resign their position at any time, with or without notice, and with or without
                 cause, but would appreciate a 2 week notice, we the employer, have similar rights to
