added emial to credit app page and removed fax number

--- a/html/apply.html
+++ b/html/apply.html
@@ -193,7 +193,7 @@
                     Make sure the second page is signed.
                 </li>
                 <li>
-                    Fax application back to 206-343-5840, but please mail the application as we 
+                    You can email the completed form to websitesales@valleyconstructionsupply.com, but please mail the application as we 
                     need the original signiature on file.
                 </li>
             </ul>
