added kirkwood to the list of partners

--- a/html/materials.html
+++ b/html/materials.html
@@ -384,6 +384,12 @@
             </div>
             <img src="/images/super-anchor.png" alt="">
         </div>
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="http://www.kirkwoodindustries.com/" target="_blank"></a>
+            </div>
+            <img src="/images/KW Logo_Standard.png" alt="">
+        </div>
     </section>
 
     <!-- ============================================ -->
