added content url

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     owned and operated supplier of wholesale concrete, framing, rebar, drainage and miscellaneous 
     construction materials for Seattle and the surrounding Puget Sound area."/>
     <meta property="og:type" content="website" />
-    <meta property="og:url" content=""/>
+    <meta property="og:url" content="https://www.valleyconstructionsupply.com/"/>
     <meta property="og:image" content="https://imgur.com/a/Vo8N2o3"/>
     <meta property="og:image:secure_url" content="https://imgur.com/a/Vo8N2o3"/>
 
