chnaged aboout button to promotions button and made new customer discount th efirst promotion on promotions page

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                     supplier of wholesale concrete, framing, rebar, drainage and miscellaneous construction materials 
                      for Seattle and the surrounding Puget Sound area.
                 </h2>
-                <button class="primary landing-b" type="button" onclick="location.href='html/about.html'" >
-                    ABOUT VCS
+                <button class="primary landing-b" type="button" onclick="location.href='html/promotions.html'" >
+                    PROMOTIONS
                 </button>
                 <button class="about solid landing-cta" type="button" onclick="window.open('/html/contact.html')">
                     CALL US
